fix card image moving out of container on small devices

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -66,7 +66,7 @@ i.fas.fa-envelope {
 }
 
 .img-200{
-    width: 300px;
+    max-width: 300px;
 }
 hr{
     background-color: white;
